Sprint 1 вторая попытка

--- a/src/pages/404-error/404-error.html
+++ b/src/pages/404-error/404-error.html
@@ -6,11 +6,11 @@
     <link href="error.css" rel="stylesheet">
   </head>
   <body>
-    <button class="button__back" type="button" onclick="location.href = '../index.html';">←</button>
-    <div class="inside">
-      <p class="line1">упс</p>
-      <h1 class="line"> Ошибка 404</h1>
-      <p class="line2">не туда зашли</p><a class="line3" href="index.html">назад к чатам</a>
+    <button class="button__back" type="button" onclick="location.href = '../main-page/index.html';">←</button>
+    <div class="error-inside-block">
+      <p class="line-error-oops">упс</p>
+      <h1 class="line-error-404"> Ошибка 404</h1>
+      <p class="line-error-wrong-place">не туда зашли</p><a class="line-error-back-to-chats" href="index.html">назад к чатам</a>
     </div>
   </body>
 </html>
