--- a/src/pages/505-error/505-error.html
+++ b/src/pages/505-error/505-error.html
@@ -6,11 +6,11 @@
     <link href="error.css" rel="stylesheet">
   </head>
   <body>
-    <button class="button__back" type="button" onclick="location.href = '../index.html';">←</button>
+    <button class="button__back" type="button" onclick="location.href = '../main-page/index.html';">←</button>
     <div class="inside">
-      <p class="line1">упс</p>
-      <h1 class="line"> Ошибка 505</h1>
-      <p class="line2">мы уже работаем над этим!</p><a class="line3" href="index.html">назад к чатам</a>
+      <p class="line-error-oops">упс</p>
+      <h1 class="line-error-505"> Ошибка 505</h1>
+      <p class="line-error-sorry">мы уже работаем над этим!</p><a class="line-error-back" href="index.html">назад к чатам</a>
     </div>
   </body>
 </html>
