--- a/src/pages/change-profile-password/new-password.html
+++ b/src/pages/change-profile-password/new-password.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <link href="../components/button__back/button__back.css" rel="stylesheet">
     <link href="../components/sign_smt_form/sign_smt_form.css" rel="stylesheet">
-    <link href="new-password.css" rel="stylesheet">
-    <!--link(href="../../components/sign_smt_form/sign_smt_form.css")-->
+    <link href="./new-password.css" rel="stylesheet">
   </head>
   <body>
     <button class="button__back" type="button" onclick="location.href = '../index.html';">←</button>
     <div class="container"><img src="../static/ava.png" alt="аватар">
       <form>
         <div>
-          <label for="oldPassword">логин</label>
+          <label for="oldPassword">старый пароль</label>
           <input name="oldPassword" type="password" id="oldPassword" placeholder="old password">
         </div>
         <div>
-          <label for="newPassword">логин</label>
+          <label for="newPassword">новый пароль</label>
           <input name="newPassword" type="password" id="newPassword" placeholder="new password">
         </div>
         <div class="column-group">
