--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <h3>выберите чат и начните переписку!</h3>
+      <p class="start-talk">выберите чат и начните переписку!</p>
     </div>
   </body>
 </html>
